--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,17 +1,18 @@
 <div class="mainpage">
   <div class="about-line"></div>
   <div class="about-header-content">
-    <h1>Welcome to Cavers</h1>
+    <h1>Welcome to Galaxia</h1>
     <span>
-      Unlock the mysteries of cryptocurrencies and blockchain technology with
-      Crypto Blogs. Dive into a world of insights, updates, and educational
-      content curated by our passionate team of experts.
+      Explore the mysteries of cryptocurrencies and blockchain technology with
+      Galaxia Crypto Blogs. Immerse yourself in a world of insights, updates,
+      and educational content curated by our passionate team of experts.
     </span>
     <p>
       Journey with us as we unravel the complexities of decentralized finance,
       NFTs, smart contracts, and more. Our mission is to demystify the crypto
       space and empower you with knowledge. Whether you're a novice or an
-      experienced enthusiast, Crypto Blogs caters to all levels of expertise.
+      experienced enthusiast, Galaxia Crypto Blogs caters to all levels of
+      expertise.
     </p>
 
     <div class="about-headline">
@@ -44,13 +45,13 @@
     </div>
     <h2>Your Crypto Journey Awaits</h2>
     <p>
-      Join us on a path of continuous learning. From novices to experts, Crypto
-      Blogs provides comprehensive insights. Id orci tellus laoreet id ac.
-      Dolor, aenean leo, ac etiam consequat in. Convallis arcu ipsum urna nibh.
-      Pharetra, euismod vitae interdum mauris enim, consequat vulputate nibh.
-      Maecenas pellentesque id sed tellus mauris, ultrices mauris. Tincidunt
-      enim cursus ridiculus mi. Pellentesque nam sed nullam sed diam turpis
-      ipsum eu a sed convallis diam.
+      Join us on a path of continuous learning. From novices to experts, Galaxia
+      Crypto Blogs provides comprehensive insights. Id orci tellus laoreet id
+      ac. Dolor, aenean leo, ac etiam consequat in. Convallis arcu ipsum urna
+      nibh. Pharetra, euismod vitae interdum mauris enim, consequat vulputate
+      nibh. Maecenas pellentesque id sed tellus mauris, ultrices mauris.
+      Tincidunt enim cursus ridiculus mi. Pellentesque nam sed nullam sed diam
+      turpis ipsum eu a sed convallis diam.
     </p>
     <div class="about-quote">
       “Unlock the potential of decentralized technologies. Vel ultricies morbi
@@ -67,12 +68,7 @@
       nullam sed diam turpis ipsum eu a sed convallis diam.
     </p>
     <div class="about-img"></div>
-    <div class="about-quote">
-      “Unlock the potential of decentralized technologies. Vel ultricies morbi
-      odio facilisi ultrices accumsan donec lacus purus. Lectus nibh ullamcorper
-      ac dictum justo in euismod. Risus aenean ut elit massa. In amet aliquet
-      eget cras. Sem volutpat enim tristique.”
-    </div>
+
     <p>
       Explore the transformative potential of blockchain and cryptocurrencies.
       Id orci tellus laoreet id ac. Dolor, aenean leo, ac etiam consequat in.
@@ -88,54 +84,54 @@
     <h2>Frequently asked questions</h2>
 
     <p-accordion [activeIndex]="0">
-      <p-accordionTab header="What is Cavers?">
+      <p-accordionTab header="What is Galaxia Crypto Blogs?">
         <p>
-          Cavers is your go-to platform for in-depth insights into the world of
+          Galaxia is your go-to platform for in-depth insights into the world of
           cryptocurrencies. We are dedicated to providing the latest updates,
           educational content, and expert analyses on everything related to
-          crypto. Whether you're a novice or an experienced enthusiast, Cavers
+          crypto. Whether you're a novice or an experienced enthusiast, Galaxia
           is here to guide you through the fascinating realm of digital assets.
         </p>
       </p-accordionTab>
-      <p-accordionTab header="Why Choose Cavers for Crypto Information?">
+      <p-accordionTab header="Why Choose Galaxia for Crypto Information?">
         <p>
-          At Cavers, we prioritize delivering accurate and up-to-date
+          At Galaxia, we prioritize delivering accurate and up-to-date
           information. Our passionate team of crypto experts is committed to
           demystifying the complexities of the crypto space. Explore with us as
           we delve into decentralized finance (DeFi), non-fungible tokens
-          (NFTs), smart contracts, and more. Trust Cavers to be your reliable
+          (NFTs), smart contracts, and more. Trust Galaxia to be your reliable
           source for all things crypto.
         </p>
       </p-accordionTab>
-      <p-accordionTab header="What Topics Does Cavers Cover?">
+      <p-accordionTab header="What Topics Does Galaxia Cover?">
         <p>
-          Cavers covers a wide range of topics, including market trends, trading
-          strategies, blockchain technology, and the latest developments in the
-          crypto industry. Whether you're interested in understanding crypto
-          data types, exploring new blockchain projects, or staying informed
-          about market analyses, Cavers has you covered.
+          Galaxia covers a wide range of topics, including market trends,
+          trading strategies, blockchain technology, and the latest developments
+          in the crypto industry. Whether you're interested in understanding
+          crypto data types, exploring new blockchain projects, or staying
+          informed about market analyses, Galaxia has you covered.
         </p>
       </p-accordionTab>
       <!-- Additional Accordion Tabs -->
-      <p-accordionTab header="How Can I Stay Updated with Cavers?">
+      <p-accordionTab header="How Can I Stay Updated with Galaxia?">
         <p>
-          Stay connected with Cavers by subscribing to our newsletter and blog
+          Stay connected with Galaxia by subscribing to our newsletter and blog
           updates. Don't miss out on the latest trends and insights in the
           ever-changing crypto landscape. Join our community of learners and
           enthusiasts who are passionate about the transformative potential of
           blockchain and cryptocurrencies.
         </p>
       </p-accordionTab>
-      <p-accordionTab header="Is Cavers Suitable for Beginners?">
+      <p-accordionTab header="Is Galaxia Suitable for Beginners?">
         <p>
-          Absolutely! Cavers caters to all levels of expertise, from beginners
+          Absolutely! Galaxia caters to all levels of expertise, from beginners
           to advanced users. Our platform provides educational content suitable
           for those just starting their crypto journey as well as those seeking
           advanced insights. Join us in exploring the dynamic and exciting world
           of cryptocurrency.
         </p>
       </p-accordionTab>
-      <p-accordionTab header="How Can I Connect with Cavers on Social Media?">
+      <p-accordionTab header="How Can I Connect with Galaxia on Social Media?">
         <p>
           Engage with us on social media platforms such as Twitter, Facebook,
           and LinkedIn. Follow us for real-time updates, discussions, and
@@ -145,11 +141,18 @@
         </p>
       </p-accordionTab>
     </p-accordion>
+    <h2>DePay Crypto Payment Integration</h2>
+    <p>
+      Galaxia now offers seamless crypto payments through the DePay plugin.
+      Experience secure and convenient transactions using a variety of
+      cryptocurrencies. Embrace the future of online payments with Galaxia.
+    </p>
+
     <h2>Our Commitment to Quality</h2>
     <p>
-      At Crypto Blogs, quality content is our priority. We strive to deliver
-      accurate and up-to-date information to empower our readers in the dynamic
-      world of cryptocurrencies.
+      At Galaxia Crypto Blogs, quality content is our priority. We strive to
+      deliver accurate and up-to-date information to empower our readers in the
+      dynamic world of cryptocurrencies.
     </p>
 
     <div class="about-quote">
@@ -167,7 +170,7 @@
     <h2>Connect with Us</h2>
     <p>
       Engage with us on social media and join the conversation. Follow us on
-      Twitter, Facebook, and LinkedIn for real-time updates and discussions.
+      Twitter,and Facebook, for real-time updates and discussions.
     </p>
   </div>
 </div>
