--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -1,17 +1,16 @@
-<!-- contact-page.component.html -->
 <div class="mainpage">
   <div class="contact-line"></div>
   <div class="contact-header-content">
-    <h1>Get in Touch with Cavers</h1>
+    <h1>Get in Touch with Galaxia</h1>
     <span>
       Select a category below to address your query or explore our Help Center
       for additional assistance.
     </span>
     <p>
       Join us on an exploration of the fascinating world of decentralized
-      finance, NFTs, and smart contracts. At Crypto Blogs, our mission is to
-      demystify the crypto space, providing valuable insights to enthusiasts at
-      every level of expertise.
+      finance, NFTs, and smart contracts. At Galaxia Crypto Blogs, our mission
+      is to demystify the crypto space, providing valuable insights to
+      enthusiasts at every level of expertise.
     </p>
     <span>Choose a topic:</span>
     <div class="contact-quotes">
@@ -81,12 +80,10 @@
       <p>
         Stay updated on the latest crypto trends and interact with our
         community. Follow us on
-        <a href="https://twitter.com/cryptoblogs" target="_blank">Twitter</a>,
-        <a href="https://www.facebook.com/cryptoblogs" target="_blank"
+        <a href="https://twitter.com/galaxiacrypto" target="_blank">Twitter</a>,
+        and
+        <a href="https://www.facebook.com/galaxiacrypto" target="_blank"
           >Facebook</a
-        >, and
-        <a href="https://www.instagram.com/cryptoblogs/" target="_blank"
-          >Instagram</a
         >.
       </p>
     </div>
