--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,23 @@
 .router{
     min-height: 650px;
     max-width: 100vw;
-
 }
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.788); /* Adjust the alpha value for transparency */
+    z-index: 1000000; /* Ensure it's above other elements */
+  }
+  
+  /* Adjust the styling for the spinner as needed */
+  .pprogressBar {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000001; /* Ensure it's above the overlay */
+  }
+  
