--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
+<div class="overlay" *ngIf="isLoading">
+  <p-progressSpinner
+    *ngIf="isLoading"
+    styleClass="w-4rem h-4rem"
+    strokeWidth="5"
+    animationDuration=".5s"
+    class="pprogressBar"
+  ></p-progressSpinner>
+</div>
 <app-navbar></app-navbar>
 <div class="router">
   <router-outlet></router-outlet>
