fix(blogs/blog) change the categories and top tags - changing the blog page adding the blog tags in the footer of the blog

--- a/src/app/pages/blog-page/blog-page.component.html
+++ b/src/app/pages/blog-page/blog-page.component.html
@@ -45,6 +45,14 @@
     <div>
       <div class="blog-content" [innerHTML]="trustedText"></div>
     </div>
+    <p-divider></p-divider>
+
+    <div>
+      <span>Tags </span>
+      <span class="categ" *ngFor="let cat of blog.tags">
+        {{ cat }}
+      </span>
+    </div>
   </ng-template>
 </div>
 <p-confirmDialog></p-confirmDialog>
