--- a/src/app/pages/blogs/blogs.component.html
+++ b/src/app/pages/blogs/blogs.component.html
@@ -174,7 +174,7 @@
             <div
               class="recommended-tag"
               *ngFor="let cat of TagsToShow"
-              (click)="navigateToCategory(cat.name)"
+              (click)="navigateToTag(cat.name)"
             >
               {{ cat.name }}
             </div>
